Fix cell height on firefox

--- a/praca-inzynierska-frontend/src/app/app/components/employer/schedule-position-week-edit/schedule-position-week-edit.component.scss
+++ b/praca-inzynierska-frontend/src/app/app/components/employer/schedule-position-week-edit/schedule-position-week-edit.component.scss
@@ -34,8 +34,13 @@
     background-color: #ffffe4;
 }
 
+.schedule_table tr {
+    height: fit-content;
+}
+
 .schedule_table td {    
     padding: 3px 3px 5px 3px;
+    height: 100%;
 }
 
 .schedule_cell {
